# ledger-rs

./: .gitignore  Cargo.toml  default.nix  shell.nix
ledger-apdu/src/: lib.rs
ledger-playground/: Cargo.toml
ledger-playground/src/: main.rs
ledger-transport-hid/: Cargo.toml
ledger-transport-hid/src/: lib.rs
ledger-transport/src/: apdu_transport_native.rs  lib.rs
nix/nixpkgs/: github.json
nix/nixpkgs-mozilla/: github.json
