[package]
name = "ledger-playground"
version = "0.1.0"
authors = ["Jacquin Mininger <jacquin.mininger@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ledger-apdu = { path = "../ledger-apdu" }
ledger-transport-hid = { path = "../ledger-transport-hid" }
